# nyt_connections_solver

./: README.md  pyproject.toml
experiments/mlruns/0/: meta.yaml
experiments/mlruns/859192022152145771/: meta.yaml
experiments/mlruns/859192022152145771/0aac53674e7a486b964b4a15a31df059/: meta.yaml
experiments/mlruns/859192022152145771/131c6b976b364fdfb527227f946f5ae8/: meta.yaml
experiments/mlruns/859192022152145771/13d725d151de4671a81cb4b539ed236b/: meta.yaml
experiments/mlruns/859192022152145771/153fd9dbe03c44e7a902ca794396d09f/: meta.yaml
experiments/mlruns/859192022152145771/157ecb043977494ea2ea9e61147a9b18/: meta.yaml
experiments/mlruns/859192022152145771/1c1c023970274b3fb77b067311a72dd9/: meta.yaml
experiments/mlruns/859192022152145771/1c78664c17a14e8db5c344ba04094deb/: meta.yaml
experiments/mlruns/859192022152145771/21cd91f503db41ada07bac67596e81f8/: meta.yaml
experiments/mlruns/859192022152145771/277b00b20f6e420a85c4fe03b3d056a8/: meta.yaml
experiments/mlruns/859192022152145771/3993e8da9dc6475a8626d7d0fb8283b4/: meta.yaml
experiments/mlruns/859192022152145771/4aa2c0b678b54a40a76061eaf1c45c67/: meta.yaml
experiments/mlruns/859192022152145771/7bc00bf86214451faaf66da203a920d4/: meta.yaml
experiments/mlruns/859192022152145771/838e86c64ef4409b90d7bfaa12be5247/: meta.yaml
src/: runner.py
src/data/: connection_grouping.json  fetch_connections.py  preprocess_data.py
src/model/: eval.py  kmeans_clustering.py
tests/: test_kmeans_clustering.py  test_preprocess_data.py
(+78 files in other folders)
