[tool.poetry]
name = "nyt_connections_solver"
version = "0.1.0"
description = ""
authors = ["wallred7 <william.allred2@mail.dcu.ie>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.1.2"
scikit-learn = "^1.5.2"
mlflow = "^2.17.2"
k-means-constrained = "^0.7.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
